main/default/objects/Chat_Index_Settings__c/Chat_Index_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Chat Index Settings</label>
</CustomObject>