main/default/objects/Chat_Index_Settings__c/fields/LastDeletedLogTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LastDeletedLogTimestamp__c</fullName>
    <label>Last Deleted Log Timestamp</label>
    <type>DateTime</type>
</CustomField>