main/default/objects/Chat_Index_Settings__c/fields/ProcessedLogHashes__c.field-meta.xml
<CustomField>
    <fullName>ProcessedLogHashes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Processed Log Hashes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>