main/default/objects/Chat_Index_Settings__c/fields/ProcessedUniqueLogs__c.field-meta.xml
<CustomField>
    <fullName>ProcessedUniqueLogs__c</fullName>
    <label>Processed Unique Logs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>